WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214547
NetworkConnectionToWebProcess should not handle NetworkRTCProvider messages
https://bugs.webkit.org/show_bug.cgi?id=214547
Summary
NetworkConnectionToWebProcess should not handle NetworkRTCProvider messages
youenn fablet
Reported
2020-07-20 03:29:32 PDT
NetworkConnectionToWebProcess should not handle NetworkRTCProvider messages
Attachments
Patch
(17.29 KB, patch)
2020-07-20 03:40 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-07-20 03:40:44 PDT
Created
attachment 404709
[details]
Patch
EWS
Comment 2
2020-07-21 11:26:44 PDT
Committed
r264665
: <
https://trac.webkit.org/changeset/264665
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404709
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-07-21 11:27:17 PDT
<
rdar://problem/65893828
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug